Fixed Bug With Expense Entries Border Color Not Showing

--- a/css/style.css
+++ b/css/style.css
@@ -115,6 +115,12 @@ h1, h2, h3, h4, h5, h6 {
 }
 
 .history .entry.expense::after {
+    content: "";
+    position: absolute;
+    top: 0;
+    right: -4px;
+    height: 100%;
+    width: 5px;
     background-color: rgb(192, 24, 24);
 }
 
